simtk/openmm/7.1/build/simtk/openmm/OpenMMAmoebaLibrary.java

	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleCubic(OpenMM_AmoebaInPlaneAngleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleCubic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleCubic(Pointer target, double cubicK);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleCubic(OpenMM_AmoebaInPlaneAngleForce*, double)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleCubic(PointerByReference target, double cubicK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleCubic(const OpenMM_AmoebaInPlaneAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleCubic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleCubic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleCubic(const OpenMM_AmoebaInPlaneAngleForce*)</code> */
	double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleCubic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleQuartic(OpenMM_AmoebaInPlaneAngleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleQuartic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleQuartic(Pointer target, double quarticK);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleQuartic(OpenMM_AmoebaInPlaneAngleForce*, double)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleQuartic(PointerByReference target, double quarticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleQuartic(const OpenMM_AmoebaInPlaneAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleQuartic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleQuartic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleQuartic(const OpenMM_AmoebaInPlaneAngleForce*)</code> */
	double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleQuartic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAnglePentic(OpenMM_AmoebaInPlaneAngleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAnglePentic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAnglePentic(Pointer target, double penticK);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAnglePentic(OpenMM_AmoebaInPlaneAngleForce*, double)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAnglePentic(PointerByReference target, double penticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAnglePentic(const OpenMM_AmoebaInPlaneAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAnglePentic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAnglePentic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAnglePentic(const OpenMM_AmoebaInPlaneAngleForce*)</code> */
	double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAnglePentic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleSextic(OpenMM_AmoebaInPlaneAngleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleSextic(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleSextic(Pointer target, double sexticK);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleSextic(OpenMM_AmoebaInPlaneAngleForce*, double)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleSextic(PointerByReference target, double sexticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleSextic(const OpenMM_AmoebaInPlaneAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleSextic(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleSextic(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleSextic(const OpenMM_AmoebaInPlaneAngleForce*)</code> */
	double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleSextic(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaInPlaneAngleForce_addAngle(OpenMM_AmoebaInPlaneAngleForce*, int, int, int, int, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_addAngle(com.sun.jna.ptr.PointerByReference, int, int, int, int, double, double)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaInPlaneAngleForce_addAngle(Pointer target, int particle1, int particle2, int particle3, int particle4, double length, double quadraticK);
	/** Original signature : <code>int OpenMM_AmoebaInPlaneAngleForce_addAngle(OpenMM_AmoebaInPlaneAngleForce*, int, int, int, int, double, double)</code> */
	int OpenMM_AmoebaInPlaneAngleForce_addAngle(PointerByReference target, int particle1, int particle2, int particle3, int particle4, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(const OpenMM_AmoebaInPlaneAngleForce*, int, int*, int*, int*, int*, double*, double*)</code><br>
	 * @deprecated use the safer methods {@link #OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(com.sun.jna.ptr.PointerByReference, int, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer)} and {@link #OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(com.sun.jna.ptr.PointerByReference, int, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(Pointer target, int index, IntByReference particle1, IntByReference particle2, IntByReference particle3, IntByReference particle4, DoubleByReference length, DoubleByReference quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(const OpenMM_AmoebaInPlaneAngleForce*, int, int*, int*, int*, int*, double*, double*)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(PointerByReference target, int index, IntBuffer particle1, IntBuffer particle2, IntBuffer particle3, IntBuffer particle4, DoubleBuffer length, DoubleBuffer quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(const OpenMM_AmoebaInPlaneAngleForce*, int, int*, int*, int*, int*, double*, double*)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(PointerByReference target, int index, IntByReference particle1, IntByReference particle2, IntByReference particle3, IntByReference particle4, DoubleByReference length, DoubleByReference quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAngleParameters(OpenMM_AmoebaInPlaneAngleForce*, int, int, int, int, int, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_setAngleParameters(com.sun.jna.ptr.PointerByReference, int, int, int, int, int, double, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_setAngleParameters(Pointer target, int index, int particle1, int particle2, int particle3, int particle4, double length, double quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAngleParameters(OpenMM_AmoebaInPlaneAngleForce*, int, int, int, int, int, double, double)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_setAngleParameters(PointerByReference target, int index, int particle1, int particle2, int particle3, int particle4, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_updateParametersInContext(OpenMM_AmoebaInPlaneAngleForce*, OpenMM_Context*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_updateParametersInContext(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_updateParametersInContext(Pointer target, Pointer context);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_updateParametersInContext(OpenMM_AmoebaInPlaneAngleForce*, OpenMM_Context*)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_updateParametersInContext(PointerByReference target, PointerByReference context);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaInPlaneAngleForce*, OpenMM_Boolean)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_setUsesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_setUsesPeriodicBoundaryConditions(Pointer target, int periodic);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaInPlaneAngleForce*, OpenMM_Boolean)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_setUsesPeriodicBoundaryConditions(PointerByReference target, int periodic);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaInPlaneAngleForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaInPlaneAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_usesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaInPlaneAngleForce_usesPeriodicBoundaryConditions(Pointer target);
	/** Original signature : <code>OpenMM_Boolean OpenMM_AmoebaInPlaneAngleForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaInPlaneAngleForce*)</code> */
	int OpenMM_AmoebaInPlaneAngleForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/** Original signature : <code>OpenMM_AmoebaMultipoleForce* OpenMM_AmoebaMultipoleForce_create()</code> */
	PointerByReference OpenMM_AmoebaMultipoleForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_destroy(OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_destroy(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_destroy(Pointer target);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_destroy(OpenMM_AmoebaMultipoleForce*)</code> */
	void OpenMM_AmoebaMultipoleForce_destroy(PointerByReference target);
